feat: implementando todas as rotas com exceção das compras cadastradas
