# src/cashback/dto/cashback-accumulated-response.ts
@@ -1,0 +1,8 @@
+import { IsString } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class CashbackAccumulatedResponsetDto {
+    @IsString()
+    @ApiProperty()
+    message: string;
+  }
